# EdgarMendes_pari

./: .gitignore  CMakeLists.txt  README.md
src/: callbacks.c  main.c  myf.c  myf.h  prototypes.h
